--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,8 +21,14 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
+$background-color: #04376C !default;
+$background-ios-color: #04376C !default;
+$background-md-color: #04376C !default;
 
-
+$select-ios-icon-color:  #f4f4f4;
+$select-ios-placeholder-color: #f4f4f4;
+$select-md-icon-color: #f4f4f4;
+$select-md-placeholder-color: #f4f4f4;
 
 
 // Named Color Variables
@@ -34,7 +40,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #04376C,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
